--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,9 +10,10 @@
 
 		.dot {
 			display: inline-block;
-			height: 20px;
-			width: 20px;
-			margin: 10px 0;
+			height: 15px;
+			width: 15px;
+			margin: 25px 0;
+			padding: 3px;
 			cursor: pointer;
 
 			background-color: none;
@@ -21,17 +22,20 @@
 			transition: 1.0s ease;
 
 			&.active {
-				background-color: $light-color;
+				background-clip: content-box;
+				background-color: $light-secondary-color;
 			}
 		}
   }
 
 	.head-container {
 			opacity: 0;
+			visibility: hidden;
 			transition: 1.0s ease;
 
 			&.active {
 					opacity: 1;
+					visibility: visible;
 			}
 
 			.title-background {
