--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -33,6 +33,35 @@
 			visibility: hidden;
 			transition: 1.0s ease;
 
+			&::after {
+				content: "";
+				position: absolute;
+				opacity: 1.0;
+				top: 50px;
+				left: 0;
+				bottom: 70px;
+				right: 0;
+				z-index: -1;
+
+				background-position: center;
+				background-size: cover;
+			}
+
+			&.container01::after {
+				background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+				url("/assets/images/home_01.png");
+			}
+
+			&.container02::after {
+				background-image: linear-gradient(-45deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+				url("/assets/images/home_02.png");
+			}
+
+			&.container03::after {
+				background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+				url("/assets/images/home_03.png");
+			}
+
 			&.active {
 					opacity: 1;
 					visibility: visible;
