--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,7 +9,7 @@
         align-items: center;
         justify-content: space-between;
 
-        height: 70px;
+        height: 50px;
         border-top: 1px solid $dark-secondary-color;
 
         a {
@@ -61,8 +61,9 @@
 
                 span {
                   position: absolute;
-                  transition: transform 0.5s;
-                  background-color: $dark-secondary-color;
+									transition: transform 0.5s;
+									//TODO : Re-use somewhere
+                  //background-color: $dark-secondary-color;
                 }
 
                 span:nth-child(1), span:nth-child(3) {
