--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -6,7 +6,7 @@
 		<h1 *ngIf="selection=='jirakan'">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
 		<h1 *ngIf="selection=='celestia'">{{ 'UNIVERSE.CELESTIA.TITLE' | translate | uppercase }}</h1>
 		<h1 *ngIf="selection=='zones'">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
-		<div *ngFor="let fact of listFacts" class="fact-container" routerLink="/universe/{{fact.route}}">
+		<div *ngFor="let fact of listFacts" class="fact-container" routerLink="/universe/{{fact.id}}">
 			<div class="fact-text">
 				<h2 class="fact-title">{{ fact.title | uppercase }}</h2>
 				<p>{{ fact.description }} {{ fact.description }}</p>
