--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,7 +8,7 @@
 
     position: absolute;
 		top: 50%;
-		left: 5%;
+		right: 5%;
     transform: translateY(-50%);
 
 		.dot {
@@ -94,7 +94,7 @@
 					left: 25%;
 					width: 35%;
 					text-align: left;
-					transform: translateX(-25%) translateY(-50%);
+					transform: translateX(-35%) translateY(-50%);
 
 					&.inversed-container {
 							left: auto;
