--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -99,9 +99,9 @@
       display: flex;
       flex-wrap: wrap;
       align-content: space-between;
-      justify-content: center;
+			justify-content: center;
+			text-align: center;
       max-width: 1260px;
-			height: 550px;
 
       .fact-container {
           position: relative;
@@ -109,7 +109,7 @@
           width: 250px;
           border: 1px solid $light-secondary-color;
           color: $secondary-color;
-          background-color: $dark-color;
+					background-color: $dark-color;
 
           margin: 10px;
           overflow: hidden;
