Style(global): Use style for title balises

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div [ngClass]="{'active': selection == 0 }" class="head-container container01">
   <div class="title-container">
     <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
-    <p class="subtitle">{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
-    <h1 class="title">{{ 'HOME.UNIVERSE.TITLE' | translate | uppercase }}</h1>
+    <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
+    <h1>{{ 'HOME.UNIVERSE.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
     <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
   </div>
@@ -23,16 +23,16 @@
     <img src="assets/images/glyphe_dices_05.png" class="glyphe glyphe05 dices" alt=""/>
   </div>
   <div class="title-container inversed-container">
-    <p class="subtitle">{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
-    <h1 class="title">{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h1>
+    <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
+    <h1>{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
     <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
   </div>
 </div>
 <div [ngClass]="{'active': selection == 2 }" class="head-container container03">
   <div class="title-container">
-    <p class="subtitle">{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
-    <h1 class="title">{{ 'HOME.CHARACTERS.TITLE' | translate | uppercase }}</h1>
+    <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
+    <h1>{{ 'HOME.CHARACTERS.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
     <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
   </div>
