--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -19,14 +19,7 @@
 				}
 
 				h1 {
-					font-size: 18px;
-					color: $light-color;
-				}
-
-				h2 {
-					font-size: 26px;
-					color: $dark-secondary-color;
-					margin: 4px 0;
+					font-size: 38px;
 				}
 
 				p {
@@ -36,11 +29,7 @@
 					font-style: italic;
 				}
 
-				.fact-zone {
-					font-size: 26px;
-				}
-
-				.fact-text {
+				.fact-container {
 					margin: 25px 0;
 				}
 
