--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -1,15 +1,15 @@
 <div class="head-container">
 	<div class="map-left">
 		<img class="logo-image" src="https://via.placeholder.com/100x100" alt="">
-		<h1 class="fact-zone" *ngIf="selection=='arlenor'">{{ 'UNIVERSE.ARLENOR.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-zone" *ngIf="selection=='faradel'">{{ 'UNIVERSE.FARADEL.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-zone" *ngIf="selection=='jirakan'">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-zone" *ngIf="selection=='celestia'">{{ 'UNIVERSE.CELESTIA.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-zone" *ngIf="selection=='zones'">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
-		<div *ngFor="let fact of listFacts; let i=index" class="fact-container">
-			<div *ngIf="i < 2" class="fact-text">
-				<h1 class="fact-title">{{ 'UNIVERSE.POINTS' | translate | uppercase }}</h1>
-				<h2 class="fact-title">{{ fact.title | uppercase }}</h2>
+		<h1 *ngIf="selection=='arlenor'">{{ 'UNIVERSE.ARLENOR.TITLE' | translate | uppercase }}</h1>
+		<h1 *ngIf="selection=='faradel'">{{ 'UNIVERSE.FARADEL.TITLE' | translate | uppercase }}</h1>
+		<h1 *ngIf="selection=='jirakan'">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
+		<h1 *ngIf="selection=='celestia'">{{ 'UNIVERSE.CELESTIA.TITLE' | translate | uppercase }}</h1>
+		<h1 *ngIf="selection=='zones'">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
+		<div *ngFor="let fact of listFacts; let i=index">
+			<div *ngIf="i < 2" class="fact-container">
+				<h4>{{ 'UNIVERSE.POINTS' | translate | uppercase }}</h4>
+				<h2>{{ fact.title | uppercase }}</h2>
 				<p>"{{ fact.description }}"<br>{{ fact.title }}</p>
 			</div>
 		</div>
