--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,8 +17,30 @@ body {
 }
 
 h1 {
+	font-size: 50px;
   color: $light-secondary-color;
-  text-transform: uppercase;
+	text-transform: uppercase;
+	margin: 0;
+}
+
+h2 {
+	font-size: 26px;
+  color: $light-secondary-color;
+	text-transform: uppercase;
+	margin: 0;
+}
+
+h3 {
+	font-size: 20px;
+  color: $light-color;
+	text-transform: uppercase;
+	margin: 0;
+}
+
+h4 {
+	font-size: 14px;
+  color: $light-color;
+	margin: 0;
 }
 
 a {
