Feat(universe): Add two sections for celestia

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -102,10 +102,9 @@
       width: 100%;
 
       .header-subtitle {
-        margin-right: 10px;
-        color: $light-secondary-color;
+				border-left: 1px solid $dark-secondary-color;
         border-right: 1px solid $dark-secondary-color;
-      }
+			}
     }
   }
 }
