--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,9 @@
 </div>
 <div class="header-subsection" [ngClass]="{'active': route == 'universe' || route == 'roleplay' || route == 'characters'}">
   <nav class="header-subnav" *ngIf="route == 'universe'">
-    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.SECTION00' | translate | uppercase"></a>
+		<a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/evanell" [innerHtml]="'HEADER.UNIVERSE.SECTION05' | translate | uppercase"></a>
+		<a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/celestia" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe" class="header-subtitle" [innerHtml]="'HEADER.UNIVERSE.SECTION00' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/religion" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/crystals" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/population" [innerHtml]="'HEADER.UNIVERSE.SECTION03' | translate | uppercase"></a>
